<?xml version="1.0"?>
<package format="2">
  <name>rospy_rviz</name>
  <version>0.0.0</version>
  <description>rospy_rviz</description>
 
  <maintainer email="xxx@njust.edu.cn">xxx</maintainer>
 
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_ros</build_depend>
  
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
 
</package>